--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -1,5 +1,14 @@
 {% extends 'main/default.html' %}
 
 {% block content %}
-    hola mundo
+    <ul class="uk-list uk-list-divider">
+        {% for curso in cursos %}
+            <li>
+                <a class="uk-display-block uk-card uk-card-body uk-card-default uk-card-hover uk-link-toggle uk-width-1-2" href="#">
+                    <h3 class="uk-card-title"><span class="uk-link-heading">{{ curso.nombre }}</span></h3>
+                    <p>{{ curso.descripcion }}</p>
+                </a>
+            </li>
+        {% endfor %}
+    </ul>
 {% endblock %}
