--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -4,7 +4,7 @@
     <ul class="uk-list uk-list-divider">
         {% for curso in cursos %}
             <li>
-                <a class="uk-display-block uk-card uk-card-body uk-card-default uk-card-hover uk-link-toggle uk-width-1-2" href="#">
+                <a class="uk-display-block uk-card uk-card-body uk-card-default uk-card-hover uk-link-toggle uk-width-1-2" href="">
                     <h3 class="uk-card-title"><span class="uk-link-heading">{{ curso.nombre }}</span></h3>
                     <p>{{ curso.descripcion }}</p>
                 </a>
