--- a/templates/default.html
+++ b/templates/default.html
@@ -6,9 +6,11 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Dashboard - UIkit 3 KickOff</title>
-		<!-- CSS FILES -->
+    <!-- CSS FILES -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.2.2/jquery.form.min.js" integrity="sha384-FzT3vTVGXqf7wRfy8k4BiyzvbNfeYjK+frTVqZeNDFl8woCbF0CYG6g2fMEFFo/i" crossorigin="anonymous"></script>
 		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.2.0/css/uikit.min.css">
-		<link rel="stylesheet" type="text/css" href="{% static 'main/css/dashboard.css' %}">
+		<link rel="stylesheet" type="text/css" href="{% static 'css/dashboard.css' %}">
 	</head>
 	<body>
 
@@ -18,25 +20,10 @@
 				<nav class="uk-navbar uk-light" data-uk-navbar="mode:click; duration: 250">
 					<div class="uk-navbar-left">
 						<div class="uk-navbar-item uk-hidden@m">
-							<a class="uk-logo" href="#"><img class="custom-logo" src="{% static 'main/img/dashboard-logo-white.svg' %}" alt=""></a>
+							<a class="uk-logo" href="#"><img class="custom-logo" src="{% static 'img/dashboard-logo-white.svg' %}" alt=""></a>
 						</div>
 						<ul class="uk-navbar-nav uk-visible@m">
 							<li><a href="#">Accounts</a></li>
-							<li>
-								<a href="#">Settings <span data-uk-icon="icon: triangle-down"></span></a>
-								<div class="uk-navbar-dropdown">
-									<ul class="uk-nav uk-navbar-dropdown-nav">
-										<li class="uk-nav-header">YOUR ACCOUNT</li>
-										<li><a href="#"><span data-uk-icon="icon: info"></span> Summary</a></li>
-										<li><a href="#"><span data-uk-icon="icon: refresh"></span> Edit</a></li>
-										<li><a href="#"><span data-uk-icon="icon: settings"></span> Configuration</a></li>
-										<li class="uk-nav-divider"></li>
-										<li><a href="#"><span data-uk-icon="icon: image"></span> Your Data</a></li>
-										<li class="uk-nav-divider"></li>
-										<li><a href="#"><span data-uk-icon="icon: sign-out"></span> Logout</a></li>
-									</ul>
-								</div>
-							</li>
 						</ul>
 						<div class="uk-navbar-item uk-visible@s">
 							<form action="dashboard.html" class="uk-search uk-search-default">
@@ -49,7 +36,7 @@
 						<ul class="uk-navbar-nav">
 							<li><a href="#" data-uk-icon="icon:user" title="Your profile" data-uk-tooltip></a></li>
 							<li><a href="#" data-uk-icon="icon: settings" title="Settings" data-uk-tooltip></a></li>
-							<li><a href="#" data-uk-icon="icon:  sign-out" title="Sign Out" data-uk-tooltip></a></li>
+							<li><a href="{% url 'usuario:logout' %}" data-uk-icon="icon:  sign-out" title="Sign Out" data-uk-tooltip></a></li>
 							<li><a class="uk-navbar-toggle" data-uk-toggle data-uk-navbar-toggle-icon href="#offcanvas-nav" title="Offcanvas" data-uk-tooltip></a></li>
 						</ul>
 					</div>
@@ -60,11 +47,11 @@
 		<!-- LEFT BAR -->
 		<aside id="left-col" class="uk-light uk-visible@m">
 			<div class="left-logo uk-flex uk-flex-middle">
-				<img class="custom-logo" src="{% static 'main/img/dashboard-logo.svg' %}" alt="">
+				<img class="custom-logo" src="{% static 'img/dashboard-logo.svg' %}" alt="">
 			</div>
 			<div class="left-content-box  content-box-dark">
-				<img src="{% static 'main/img/avatar.svg' %}" alt="" class="uk-border-circle profile-img">
-				<h4 class="uk-text-center uk-margin-remove-vertical text-light">John Doe</h4>
+				<img src="{% static 'img/avatar.svg' %}" alt="" class="uk-border-circle profile-img">
+				<h4 class="uk-text-center uk-margin-remove-vertical text-light">{{ request.user }}</h4>
 				
 				<div class="uk-position-relative uk-text-center uk-display-block">
 				    <a href="#" class="uk-text-small uk-text-muted uk-display-block uk-text-center" data-uk-icon="icon: triangle-down; ratio: 0.7">Admin</a>
@@ -86,29 +73,26 @@
 			
 			<div class="left-nav-wrap">
 				<ul class="uk-nav uk-nav-default uk-nav-parent-icon" data-uk-nav>
-					<li class="uk-nav-header">ACTIONS</li>
+					<li class="uk-nav-header">Acciones</li>
 					<li><a href="#"><span data-uk-icon="icon: comments" class="uk-margin-small-right"></span>Messages</a></li>
 					<li><a href="#"><span data-uk-icon="icon: users" class="uk-margin-small-right"></span>Friends</a></li>
-					<li class="uk-parent"><a href="#"><span data-uk-icon="icon: thumbnails" class="uk-margin-small-right"></span>Templates</a>
+					<li class="uk-parent"><a href="#"><span data-uk-icon="icon: folder" class="uk-margin-small-right"></span>Mis borradores</a>
 						<ul class="uk-nav-sub">
-							<li><a title="Article" href="https://zzseba78.github.io/Kick-Off/article.html">Article</a></li>
-							<li><a title="Album" href="https://zzseba78.github.io/Kick-Off/album.html">Album</a></li>
-							<li><a title="Cover" href="https://zzseba78.github.io/Kick-Off/cover.html">Cover</a></li>
-							<li><a title="Cards" href="https://zzseba78.github.io/Kick-Off/cards.html">Cards</a></li>
-							<li><a title="News Blog" href="https://zzseba78.github.io/Kick-Off/newsBlog.html">News Blog</a></li>
-							<li><a title="Price" href="https://zzseba78.github.io/Kick-Off/price.html">Price</a></li>
-							<li><a title="Login" href="https://zzseba78.github.io/Kick-Off/login.html">Login</a></li>
-							<li><a title="Login-Dark" href="https://zzseba78.github.io/Kick-Off/login-dark.html">Login - Dark</a></li>
+							{% for draft in request.user.curso_set.all %}
+								{% if draft.estado < 2 %}
+									<li><a title="{{ draft }}" href="{% url 'curso:editar' draft.hash_id %}"><span data-uk-icon="icon: file-edit" class="uk-margin-small-right"></span>{{ draft }}</a></li>
+								{% endif %}
+							{% endfor %}
+							<li><a title="Agregar" href="{% url 'curso:crear' %}"><span data-uk-icon="icon: plus-circle" class="uk-margin-small-right"></span>Agregar</a></li>
 						</ul>
 					</li>
-					<li><a href="#"><span data-uk-icon="icon: album" class="uk-margin-small-right"></span>Albums</a></li>
-					<li><a href="#"><span data-uk-icon="icon: thumbnails" class="uk-margin-small-right"></span>Featured Content</a></li>
-					<li><a href="#"><span data-uk-icon="icon: lifesaver" class="uk-margin-small-right"></span>Tips</a></li>
-					<li class="uk-parent">
-						<a href="#"><span data-uk-icon="icon: comments" class="uk-margin-small-right"></span>Reports</a>
+					<li class="uk-parent"><a href="#"><span data-uk-icon="icon: folder" class="uk-margin-small-right"></span>Mis cursos</a>
 						<ul class="uk-nav-sub">
-							<li><a href="#">Sub item</a></li>
-							<li><a href="#">Sub item</a></li>
+							{% for draft in request.user.curso_set.all %}
+								{% if draft.estado > 1 %}
+									<li><a title="{{ draft }}" href="{% url 'curso:detalle' draft.slug %}">{{ draft }}</a></li>
+								{% endif %}
+							{% endfor %}
 						</ul>
 					</li>
 				</ul>
@@ -134,7 +118,7 @@
 			<div class="bar-bottom">
 				<ul class="uk-subnav uk-flex uk-flex-center uk-child-width-1-5" data-uk-grid>
 					<li>
-						<a href="#" class="uk-icon-link" data-uk-icon="icon: home" title="Home" data-uk-tooltip></a>
+						<a href="{% url 'curso:lista' %}" class="uk-icon-link" data-uk-icon="icon: home" title="Home" data-uk-tooltip></a>
 					</li>
 					<li>
 						<a href="#" class="uk-icon-link" data-uk-icon="icon: settings" title="Settings" data-uk-tooltip></a>
@@ -144,7 +128,7 @@
 					</li>
 					
 					<li>
-						<a href="#" class="uk-icon-link" data-uk-tooltip="Sign out" data-uk-icon="icon: sign-out"></a>
+						<a href="{% url 'usuario:logout' %}" class="uk-icon-link" data-uk-tooltip="Sign out" data-uk-icon="icon: sign-out"></a>
 					</li>
 				</ul>
 			</div>
@@ -153,8 +137,10 @@
 		<!-- CONTENT -->
 		<div id="content" data-uk-height-viewport="expand: true">
 			<div class="uk-container uk-container-expand">
-                {% block content %}
-                {% endblock %}
+				<div class="uk-margin-medium-left uk-width-2-3 uk-margin-medium-bottom">
+					{% block content %}
+					{% endblock %}
+				</div>
 			</div>
 		</div>
 		<!-- /CONTENT -->
@@ -187,7 +173,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.2.0/js/uikit.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.2.0/js/uikit-icons.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"></script>
-		<script src="{% static 'main/js/chartScripts.js' %}"></script>
+		<!-- <script src="{% static 'js/chartScripts.js' %}"></script> -->
 	</body>
 </html>
 
