--- a/templates/default.html
+++ b/templates/default.html
@@ -49,52 +49,74 @@
 			<div class="left-logo uk-flex uk-flex-middle">
 				<img class="custom-logo" src="{% static 'img/dashboard-logo.svg' %}" alt="">
 			</div>
-			<div class="left-content-box  content-box-dark">
-				<img src="{% static 'img/avatar.svg' %}" alt="" class="uk-border-circle profile-img">
-				<h4 class="uk-text-center uk-margin-remove-vertical text-light">{{ request.user }}</h4>
-				
-				<div class="uk-position-relative uk-text-center uk-display-block">
-				    <a href="#" class="uk-text-small uk-text-muted uk-display-block uk-text-center" data-uk-icon="icon: triangle-down; ratio: 0.7">Admin</a>
-				    <!-- user dropdown -->
-				    <div class="uk-dropdown user-drop" data-uk-dropdown="mode: click; pos: bottom-center; animation: uk-animation-slide-bottom-small; duration: 150">
-				    	<ul class="uk-nav uk-dropdown-nav uk-text-left">
-								<li><a href="#"><span data-uk-icon="icon: info"></span> Summary</a></li>
-								<li><a href="#"><span data-uk-icon="icon: refresh"></span> Edit</a></li>
-								<li><a href="#"><span data-uk-icon="icon: settings"></span> Configuration</a></li>
-								<li class="uk-nav-divider"></li>
-								<li><a href="#"><span data-uk-icon="icon: image"></span> Your Data</a></li>
-								<li class="uk-nav-divider"></li>
-								<li><a href="#"><span data-uk-icon="icon: sign-out"></span> Sign Out</a></li>
-					    </ul>
-				    </div>
-				    <!-- /user dropdown -->
+			{% if request.user.is_authenticated %}
+				<div class="left-content-box  content-box-dark">
+					<img src="{% static 'img/avatar.svg' %}" alt="" class="uk-border-circle profile-img">
+					<h4 class="uk-text-center uk-margin-remove-vertical text-light">{{ request.user }}</h4>
+					
+					<div class="uk-position-relative uk-text-center uk-display-block">
+						<a href="#" class="uk-text-small uk-text-muted uk-display-block uk-text-center" data-uk-icon="icon: triangle-down; ratio: 0.7">
+							{% if request.user.is_superuser %}
+								Admin
+							{% else %}
+								{{ request.user.profile.get_tipo }}
+							{% endif %}
+						</a>
+						<!-- user dropdown -->
+						<div class="uk-dropdown user-drop" data-uk-dropdown="mode: click; pos: bottom-center; animation: uk-animation-slide-bottom-small; duration: 150">
+							<ul class="uk-nav uk-dropdown-nav uk-text-left">
+									<li><a href="#"><span data-uk-icon="icon: info"></span> Summary</a></li>
+									<li><a href="#"><span data-uk-icon="icon: refresh"></span> Edit</a></li>
+									<li><a href="#"><span data-uk-icon="icon: settings"></span> Configuration</a></li>
+									<li class="uk-nav-divider"></li>
+									<li><a href="#"><span data-uk-icon="icon: image"></span> Your Data</a></li>
+									<li class="uk-nav-divider"></li>
+									<li><a href="#"><span data-uk-icon="icon: sign-out"></span> Sign Out</a></li>
+							</ul>
+						</div>
+						<!-- /user dropdown -->
+					</div>
 				</div>
-			</div>
+			{% endif %}
 			
 			<div class="left-nav-wrap">
 				<ul class="uk-nav uk-nav-default uk-nav-parent-icon" data-uk-nav>
 					<li class="uk-nav-header">Acciones</li>
-					<li><a href="#"><span data-uk-icon="icon: comments" class="uk-margin-small-right"></span>Messages</a></li>
-					<li><a href="#"><span data-uk-icon="icon: users" class="uk-margin-small-right"></span>Friends</a></li>
-					<li class="uk-parent"><a href="#"><span data-uk-icon="icon: folder" class="uk-margin-small-right"></span>Mis borradores</a>
-						<ul class="uk-nav-sub">
-							{% for draft in request.user.curso_set.all %}
-								{% if draft.estado < 2 %}
-									<li><a title="{{ draft }}" href="{% url 'curso:editar' draft.hash_id %}"><span data-uk-icon="icon: file-edit" class="uk-margin-small-right"></span>{{ draft }}</a></li>
-								{% endif %}
-							{% endfor %}
-							<li><a title="Agregar" href="{% url 'curso:crear' %}"><span data-uk-icon="icon: plus-circle" class="uk-margin-small-right"></span>Agregar</a></li>
-						</ul>
-					</li>
-					<li class="uk-parent"><a href="#"><span data-uk-icon="icon: folder" class="uk-margin-small-right"></span>Mis cursos</a>
-						<ul class="uk-nav-sub">
-							{% for draft in request.user.curso_set.all %}
-								{% if draft.estado > 1 %}
-									<li><a title="{{ draft }}" href="{% url 'curso:detalle' draft.slug %}">{{ draft }}</a></li>
-								{% endif %}
-							{% endfor %}
-						</ul>
-					</li>
+					{% if not request.user.is_authenticated %}
+						<li><a href="{% url 'usuario:login' %}"><span data-uk-icon="icon: sign-in" class="uk-margin-small-right"></span>Iniciar sesion</a></li>
+						<li><a href="#"><span data-uk-icon="icon: file-edit" class="uk-margin-small-right"></span>Registrase</a></li>
+					{% else %}
+						{% if request.user.profile.tipo == 2 or request.user.is_superuser %}
+							<li class="uk-parent"><a href="#"><span data-uk-icon="icon: folder" class="uk-margin-small-right"></span>Mis borradores</a>
+								<ul class="uk-nav-sub">
+									{% for draft in request.user.curso_set.all %}
+										{% if draft.estado < 2 %}
+											<li><a title="{{ draft }}" href="{% url 'curso:editar' draft.hash_id %}"><span data-uk-icon="icon: file-edit" class="uk-margin-small-right"></span>{{ draft }}</a></li>
+										{% endif %}
+									{% endfor %}
+									<li><a title="Agregar" href="{% url 'curso:crear' %}"><span data-uk-icon="icon: plus-circle" class="uk-margin-small-right"></span>Agregar</a></li>
+								</ul>
+							</li>
+						
+							<li class="uk-parent"><a href="#"><span data-uk-icon="icon: folder" class="uk-margin-small-right"></span>Mis cursos</a>
+								<ul class="uk-nav-sub">
+									{% for curso in request.user.curso_set.all %}
+										{% if curso.estado > 1 %}
+											<li><a title="{{ curso }}" href="{% url 'curso:detalle' curso.slug %}">{{ curso }}</a></li>
+										{% endif %}
+									{% endfor %}
+								</ul>
+							</li>
+						{% elif request.user.profile.tipo == 0 %}
+							<li class="uk-parent"><a href="#"><span data-uk-icon="icon: folder" class="uk-margin-small-right"></span>Cursos inscritos</a>
+								<ul class="uk-nav-sub">
+									{% for inscripcion in request.user.inscripcion_set.all %}
+										<li><a title="{{ inscripcion.curso }}" href="{% url 'curso:detalle' inscripcion.curso.slug %}">{{ inscripcion.curso }}</a></li>
+									{% endfor %}
+								</ul>
+							</li>
+						{% endif %}
+					{% endif %}
 				</ul>
 				<div class="left-content-box uk-margin-top">
 					
