--- a/usuario/templates/usuario/login.html
+++ b/usuario/templates/usuario/login.html
@@ -18,6 +18,9 @@
 			<form class="toggle-class" action="{% url 'usuario:login' %}" method="POST">
                 {% csrf_token %}
 				<fieldset class="uk-fieldset">
+					<div class="uk-margin-small uk-flex uk-flex-center">
+						<legend class="uk-legend">Inicio de sessión</legend>
+					</div>
 					<div class="uk-margin-small">
 						<div class="uk-inline uk-width-1-1">
 							<span class="uk-form-icon uk-form-icon-flip" data-uk-icon="icon: user"></span>
@@ -30,38 +33,13 @@
 							<input class="uk-input uk-border-pill" name="password" required placeholder="Contraseña" type="password">
 						</div>
 					</div>
-					<div class="uk-margin-small">
-						<label><input class="uk-checkbox" type="checkbox"> Keep me logged in</label>
-					</div>
 					<div class="uk-margin-bottom">
 						<button type="submit" class="uk-button uk-button-primary uk-border-pill uk-width-1-1">INICIAR SESION</button>
 					</div>
 				</fieldset>
 			</form>
 			<!-- /login -->
-
-			<!-- recover password -->
-			<form class="toggle-class" action="login-dark.html" hidden>
-				<div class="uk-margin-small">
-					<div class="uk-inline uk-width-1-1">
-						<span class="uk-form-icon uk-form-icon-flip" data-uk-icon="icon: mail"></span>
-						<input class="uk-input uk-border-pill" placeholder="E-mail" required type="text">
-					</div>
-				</div>
-				<div class="uk-margin-bottom">
-					<button type="submit" class="uk-button uk-button-primary uk-border-pill uk-width-1-1">SEND PASSWORD</button>
-				</div>
-			</form>
-			<!-- /recover password -->
 			
-			<!-- action buttons -->
-			<div>
-				<div class="uk-text-center">
-					<a class="uk-link-reset uk-text-small toggle-class" data-uk-toggle="target: .toggle-class ;animation: uk-animation-fade">Forgot your password?</a>
-					<a class="uk-link-reset uk-text-small toggle-class" data-uk-toggle="target: .toggle-class ;animation: uk-animation-fade" hidden><span data-uk-icon="arrow-left"></span> Back to Login</a>
-				</div>
-			</div>
-			<!-- action buttons -->
 		</div>
 		
 		<!-- JS FILES -->
