--- a/usuario/templates/usuario/login.html
+++ b/usuario/templates/usuario/login.html
@@ -18,7 +18,7 @@
 			<form class="toggle-class" action="{% url 'usuario:login' %}" method="POST">
                 {% csrf_token %}
 				<fieldset class="uk-fieldset">
-					<div class="uk-margin-small uk-flex uk-flex-center">
+					<div class="uk-margin-small uk-text-center">
 						<legend class="uk-legend">Inicio de sessión</legend>
 					</div>
 					<div class="uk-margin-small">
@@ -40,6 +40,13 @@
 			</form>
 			<!-- /login -->
 			
+			<!-- action buttons -->
+			<div>
+				<div class="uk-text-center">
+					<a href="#" class="uk-link-reset uk-text-small toggle-class">Registrarse</a>
+				</div>
+			</div>
+			<!-- action buttons -->
 		</div>
 		
 		<!-- JS FILES -->
