--- a/curso/templates/curso/lista.html
+++ b/curso/templates/curso/lista.html
@@ -21,7 +21,7 @@
                         <br>
                         <span class="uk-text-small">
                             <b>Instructor:</b> <a class="uk-link-text" href="#">{{ curso.instructor }}</a>
-                            <b class="uk-margin-small-left">Comenza en:</b> {{ curso.fecha_inicial }}
+                            <b class="uk-margin-small-left">Comienza en:</b> {{ curso.fecha_inicial }}
                             <b class="uk-margin-small-left">Termina en:</b> {{ curso.fecha_final }}
                         </span>
                         <p class="uk-text-truncate">{{ curso.descripcion }}</p>
