--- a/curso/templates/curso/detail.html
+++ b/curso/templates/curso/detail.html
@@ -6,7 +6,13 @@
     <p><b>Duración:</b> {{ curso.duracion }} hrs</p>
     <p><b>Incio:</b> {{ curso.fecha_inicial }}<br>
     <p><b>Finalliza:</b> {{ curso.fecha_final }}</p>
+    <p><b>Caracter:</b></p> <p>{{ curso.caracter }}</p>
     <p><b>Descripción:</b></p> <p>{{ curso.descripcion }}</p>
+    <p><b>Objetivo general:</b></p> <p>{{ curso.obj_general }}</p>
+    <p><b>Contenido Sintetico:</b></p> <p>{{ curso.contenido_sintetico }}</p>
+    <p><b>Antescedentes o habilidades necesarias de los alumnos:</b></p> <p>{{ curso.hab_alumnos }}</p>
+    <p><b>Requisitos de idioma:</b></p> <p>{{ curso.idioma }}</p>
+    <p><b>Bibliografia:</b></p> <p>{{ curso.contenido_sintetico }}</p>
     <p><b>Aula:</b> {{ curso.aula }}<p>
     <p><b>Costo:</b> {{ curso.costo }}</p>
 
@@ -24,8 +30,8 @@
         {% endif %}
     {% endif %}
 
-    <p><b>Cupo Mínimo:</b> {{ curso.cupo_min }}</p>
-    <p><b>Cupo Máximo:</b> {{ curso.cupo_max }}</p>
+    
+    <p><b>Cupo:</b> {{ curso.cupo_max }}</p>
         {% if curso.inscripcion_set.count == curso.cupo %}
             <button class="uk-button uk-button-default" disabled>Inscribirse al curso</button>
         {% else %}
