--- a/curso/templates/curso/detail.html
+++ b/curso/templates/curso/detail.html
@@ -16,7 +16,7 @@
     <p><b>Aula:</b> {{ curso.aula }}<p>
     <p><b>Costo:</b> {{ curso.costo }}</p>
 
-    {% if curso.inscripcion_set.count == curso.cupo %}
+    {% if curso.inscripcion_set.count == curso.cupo_max %}
         <p><b>Estado:</b>  <span class="uk-label uk-label-danger">Lleno</span></p>
     {% else %}
         {% if curso.estado < 2 %}
@@ -29,9 +29,8 @@
             <p><b>Estado:</b>  <span class="uk-label uk-label-warning">{{curso.get_estado }}</span></p>
         {% endif %}
     {% endif %}
-
-    
-    <p><b>Cupo:</b> {{ curso.cupo_max }}</p>
+        
+    <p><b>Cupos disponibles:</b> {{ cupos_disponibles}}</p>
         {% if curso.inscripcion_set.count == curso.cupo %}
             <button class="uk-button uk-button-default" disabled>Inscribirse al curso</button>
         {% else %}
