--- a/usuario/templates/usuario/login.html
+++ b/usuario/templates/usuario/login.html
@@ -19,7 +19,7 @@
                 {% csrf_token %}
 				<fieldset class="uk-fieldset">
 					<div class="uk-margin-small uk-text-center">
-						<legend class="uk-legend">Inicio de sessión</legend>
+						<legend class="uk-legend">Inicio de sesión</legend>
 					</div>
 					<div class="uk-margin-small">
 						<div class="uk-inline uk-width-1-1">
