--- a/templates/default.html
+++ b/templates/default.html
@@ -53,7 +53,7 @@
 				<div class="left-content-box  content-box-dark">
 					<img src="{% static 'img/avatar.svg' %}" alt="" class="uk-border-circle profile-img">
 					<h4 class="uk-text-center uk-margin-remove-vertical text-light">{{ request.user }}</h4>
-					
+
 					<div class="uk-position-relative uk-text-center uk-display-block">
 						<a href="#" class="uk-text-small uk-text-muted uk-display-block uk-text-center" data-uk-icon="icon: triangle-down; ratio: 0.7">
 							{% if request.user.is_superuser %}
@@ -78,7 +78,7 @@
 					</div>
 				</div>
 			{% endif %}
-			
+
 			<div class="left-nav-wrap">
 				<ul class="uk-nav uk-nav-default uk-nav-parent-icon" data-uk-nav>
 					<li class="uk-nav-header">Acciones</li>
@@ -97,7 +97,7 @@
 									<li><a title="Agregar" href="{% url 'curso:crear' %}"><span data-uk-icon="icon: plus-circle" class="uk-margin-small-right"></span>Agregar</a></li>
 								</ul>
 							</li>
-						
+
 							<li class="uk-parent"><a href="#"><span data-uk-icon="icon: folder" class="uk-margin-small-right"></span>Mis cursos</a>
 								<ul class="uk-nav-sub">
 									{% for curso in request.user.curso_set.all %}
@@ -115,14 +115,21 @@
 									{% endfor %}
 								</ul>
 							</li>
+							<li class="uk-parent"><a href="#"><span data-uk-icon="icon: folder" class="uk-margin-small-right"></span>Constancias</a>
+								<ul class="uk-nav-sub">
+									{% for inscripcion in request.user.inscripcion_set.all %}
+										<li><a target="_blank" href="{{ inscripcion.pdf }}"> {{ inscripcion.pdf }} </a></li>
+									{% endfor %}
+								</ul>
+							</li>
 						{% endif %}
 					{% endif %}
 				</ul>
 				<div class="left-content-box uk-margin-top">
-				
-					
+
+
 				</div>
-				
+
 			</div>
 			<div class="bar-bottom">
 				<ul class="uk-subnav uk-flex uk-flex-center uk-child-width-1-5" data-uk-grid>
@@ -135,7 +142,7 @@
 					<li>
 						<a href="#" class="uk-icon-link" data-uk-icon="icon: social"  title="Social" data-uk-tooltip></a>
 					</li>
-					
+
 					<li>
 						<a href="{% url 'usuario:logout' %}" class="uk-icon-link" data-uk-tooltip="Sign out" data-uk-icon="icon: sign-out"></a>
 					</li>
@@ -177,7 +184,7 @@
 			</div>
 		</div>
 		<!-- /OFFCANVAS -->
-		
+
 		<!-- JS FILES -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.2.0/js/uikit.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.2.0/js/uikit-icons.min.js"></script>
