formato bonito pdf

--- a/curso/templates/curso/detail.html
+++ b/curso/templates/curso/detail.html
@@ -54,7 +54,7 @@
 
     <form action="{% url 'curso:generar' curso.slug %}" method="GET">
         {% csrf_token %}
-        <input type="submit" class="uk-button uk-button-primary" value="Generar const">
+        <input type="submit" class="uk-button uk-button-primary" value="Generar constancia">
     </form>
     
         
